Fixed header overflow on iOS

--- a/css/main.css
+++ b/css/main.css
@@ -511,7 +511,9 @@ body {
       background: #797979; }
 
 .content {
-  margin-top: 80px; }
+  margin-top: 80px;
+  overflow: auto;
+  -webkit-overflow-scrolling: touch; }
   .content .playlist .loader, .content .playlist .song-container, .content .playlist .search-container {
     height: 60px;
     margin-bottom: 10px;
@@ -568,9 +570,7 @@ body {
       padding-top: 0.75rem;
       float: left;
       height: 58px;
-      max-width: calc(100% - 70px);
-      overflow: auto;
-      -webkit-overflow-scrolling: touch; }
+      max-width: calc(100% - 70px); }
       .content .playlist .song-container .info-wrapper .title, .content .playlist .song-container .info-wrapper .artist {
         white-space: nowrap;
         overflow: hidden; }
